WIP: Beggining to create 3 different methods to build a list of sites, each is used for a different input file type. Then we can use the same code to write the .cube file based off this list. Taking this opportunity to practice interfaces & implementation i.e. pure virtual functions.

--- a/CubeGen.vcxproj.filters
+++ b/CubeGen.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="CubeGen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sites.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CubeGen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sites.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
