--- a/CubeGen.vcxproj
+++ b/CubeGen.vcxproj
@@ -156,10 +156,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CubeGen.cpp" />
+    <ClCompile Include="sites.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CubeGen.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="sites.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
